nginx-network-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service
  namespace: ns-one
spec:
  selector:
    app: nginx
  type: ClusterIP
  ports:
    - targetPort: 80
      port: 80
